detect: header_lowercase transform
Ticket: 6290
(cherry picked from commit 32cce122e1d8bb568cd5ff1b0db51c488cfb9f58)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -339,6 +339,7 @@ noinst_HEADERS = \
 	detect-tos.h \
 	detect-transform-compress-whitespace.h \
 	detect-transform-dotprefix.h \
+	detect-transform-header-lowercase.h \
 	detect-transform-md5.h \
 	detect-transform-pcrexform.h \
 	detect-transform-sha1.h \
@@ -948,6 +949,7 @@ libsuricata_c_a_SOURCES = \
 	detect-tos.c \
 	detect-transform-compress-whitespace.c \
 	detect-transform-dotprefix.c \
+	detect-transform-header-lowercase.c \
 	detect-transform-md5.c \
 	detect-transform-pcrexform.c \
 	detect-transform-sha1.c \
