--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -934,6 +934,8 @@ app-layer:
     smtp:
       enabled: yes
       raw-extraction: no
+      # Maximum number of live SMTP transactions per flow
+      # max-tx: 256
       # Configure SMTP-MIME Decoder
       mime:
         # Decode MIME messages from SMTP transactions
