github-ci: don't add author names/emails to new author comment
The new author details will still be available in the artifact, we're
just not calling them out in a nighly visible pull request comment.

--- a/.github/workflows/authors-done.yml
+++ b/.github/workflows/authors-done.yml
@@ -44,8 +44,7 @@ jobs:
           script: |
             let fs = require('fs');
             let issue_number = Number(fs.readFileSync('./pr-number.txt'));
-            let new_authors = String(fs.readFileSync('./new-authors.txt'));
-            let msg = 'NOTE: This PR may contain new authors:\n\n```\n' + new_authors + '```';
+            let msg = 'NOTE: This PR may contain new authors.';
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
