python: remove python implementation of suricatasc/suricatactl

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,28 +1,13 @@
 LIBS =	\
 		suricata/__init__.py \
-		suricata/config/__init__.py \
-		suricata/ctl/__init__.py \
-		suricata/ctl/filestore.py \
-		suricata/ctl/loghandler.py \
-		suricata/ctl/main.py \
-		suricata/ctl/test_filestore.py \
-		suricata/sc/__init__.py \
-		suricata/sc/specs.py \
-		suricata/sc/suricatasc.py \
-		suricatasc/__init__.py
+		suricata/config/__init__.py
 
-EXTRA_DIST = $(LIBS) bin suricata/config/defaults.py
+EXTRA_DIST = $(LIBS) suricata/config/defaults.py
 
 if HAVE_PYTHON
 
 install-exec-local:
 	install -d -m 0755 "$(DESTDIR)$(prefix)/lib/suricata/python/suricata/config"
-	install -d -m 0755 "$(DESTDIR)$(prefix)/lib/suricata/python/suricata/ctl"
-	install -d -m 0755 "$(DESTDIR)$(prefix)/lib/suricata/python/suricata/sc"
-	install -d -m 0755 "$(DESTDIR)$(prefix)/lib/suricata/python/suricatasc"
-	for src in $(LIBS); do \
-		install -m 0644 $(srcdir)/$$src "$(DESTDIR)$(prefix)/lib/suricata/python/$$src"; \
-	done
 	install suricata/config/defaults.py \
 		"$(DESTDIR)$(prefix)/lib/suricata/python/suricata/config/defaults.py"
 
