install-deps: new script to install dependencies
This is a script to help install dependencies for the most popular
Linux distributions. Currently Fedora, Ubuntu and Debian are
supported.

By default, dependencies for end users building Suricata are
install. With the --developer command line option extra dependencies
will be included such as those for building from git, ASAN and
documentation build tools.

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,8 @@ EXTRA_DIST = ChangeLog COPYING LICENSE suricata.yaml.in \
              $(SURICATA_UPDATE_DIR) \
 	     lua \
 	     acsite.m4 \
-	     scripts/generate-images.sh
+	     scripts/generate-images.sh \
+	     scripts/install-deps.sh
 SUBDIRS = $(HTP_DIR) rust src qa rules doc contrib etc python ebpf \
           $(SURICATA_UPDATE_DIR)
 DIST_SUBDIRS = examples/plugins/c-json-filetype $(SUBDIRS)
