--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -1744,55 +1744,14 @@ jobs:
           path: ~/.cargo
           key: ${{ github.job }}-cargo
 
-      - name: Install dependencies
-        run: |
-          apt update
-          apt -y install \
-                libpcre2-dev \
-                build-essential \
-                autoconf \
-                automake \
-                cargo \
-                git \
-                jq \
-                libtool \
-                libpcap-dev \
-                libnet1-dev \
-                libyaml-0-2 \
-                libyaml-dev \
-                libcap-ng-dev \
-                libcap-ng0 \
-                libmagic-dev \
-                libnetfilter-queue-dev \
-                libnetfilter-queue1 \
-                libnfnetlink-dev \
-                libnfnetlink0 \
-                libhiredis-dev \
-                libjansson-dev \
-                libevent-dev \
-                libevent-pthreads-2.1-7 \
-                libjansson-dev \
-                libpython2.7 \
-                make \
-                parallel \
-                python3-yaml \
-                rustc \
-                software-properties-common \
-                zlib1g \
-                zlib1g-dev \
-                exuberant-ctags
       - uses: actions/checkout@v3.5.3
       - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
         with:
           name: prep
           path: prep
+      - name: Install dependencies
+        run: ./scripts/install-deps.sh --developer
       - run: tar xf prep/libhtp.tar.gz
-      - name: Setup cbindgen
-        run: |
-          mkdir -p $HOME/.cargo/bin
-          cp prep/cbindgen $HOME/.cargo/bin
-          chmod 755 $HOME/.cargo/bin/cbindgen
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - run: ./autogen.sh
       - run: ./configure --enable-debug-validation
         env:
@@ -1822,52 +1781,18 @@ jobs:
           path: ~/.cargo
           key: ${{ github.job }}-cargo
 
+      - uses: actions/checkout@v3.5.3
       - name: Install dependencies
         run: |
-          apt update
+          ./scripts/install-deps.sh --developer
           apt -y install \
-                afl \
-                afl-clang \
-                libpcre2-dev \
-                build-essential \
-                autoconf \
-                automake \
-                cargo \
-                git \
-                libtool \
-                libpcap-dev \
-                libnet1-dev \
-                libyaml-0-2 \
-                libyaml-dev \
-                libcap-ng-dev \
-                libcap-ng0 \
-                libmagic-dev \
-                libnetfilter-queue-dev \
-                libnetfilter-queue1 \
-                libnfnetlink-dev \
-                libnfnetlink0 \
-                libhiredis-dev \
-                libjansson-dev \
-                libjansson-dev \
-                libpython2.7 \
-                make \
-                rustc \
-                software-properties-common \
-                zlib1g \
-                zlib1g-dev
-      - run: echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-      - uses: actions/checkout@v3.5.3
+            afl \
+            afl-clang
       - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
         with:
           name: prep
           path: prep
       - run: tar xf prep/libhtp.tar.gz
-      - name: Setup cbindgen
-        run: |
-          mkdir -p $HOME/.cargo/bin
-          cp prep/cbindgen $HOME/.cargo/bin
-          chmod 755 $HOME/.cargo/bin/cbindgen
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - run: ./autogen.sh
       - run: AFL_HARDEN=1 ac_cv_func_realloc_0_nonnull=yes ac_cv_func_malloc_0_nonnull=yes CFLAGS="-fsanitize=address -fno-omit-frame-pointer" CXXFLAGS=$CFLAGS CC=afl-clang-fast CXX=afl-clang-fast++ LDFLAGS="-fsanitize=address" ./configure --enable-fuzztargets --disable-shared
       - run: AFL_HARDEN=1 make -j2
@@ -1884,48 +1809,13 @@ jobs:
           path: ~/.cargo/registry
           key: cargo-registry
 
-      - name: Install dependencies
-        run: |
-            sudo apt update
-            sudo apt -y install \
-                  libpcre2-dev \
-                  build-essential \
-                  autoconf \
-                  automake \
-                  cargo \
-                  git \
-                  jq \
-                  libtool \
-                  libpcap-dev \
-                  libnet1-dev \
-                  libyaml-0-2 \
-                  libyaml-dev \
-                  libcap-ng-dev \
-                  libcap-ng0 \
-                  libmagic-dev \
-                  libnetfilter-queue-dev \
-                  libnetfilter-queue1 \
-                  libnfnetlink-dev \
-                  libnfnetlink0 \
-                  libhiredis-dev \
-                  libjansson-dev \
-                  libevent-dev \
-                  libevent-pthreads-2.1-7 \
-                  libjansson-dev \
-                  libpython2.7 \
-                  make \
-                  parallel \
-                  python3-yaml \
-                  rustc \
-                  software-properties-common \
-                  zlib1g \
-                  zlib1g-dev \
-                  exuberant-ctags
+      - uses: actions/checkout@v3.5.3
 
+      - name: Install dependencies
+        run: sudo ./scripts/install-deps.sh --developer
       - name: Install Netmap dependencies
         run: |
           sudo apt -y install \
-                build-essential \
                 git \
                 linux-headers-$(uname -r)
 
@@ -1943,18 +1833,11 @@ jobs:
           make -j2
           sudo make install
 
-      - uses: actions/checkout@v3.5.3
       - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
         with:
           name: prep
           path: prep
       - run: tar xf prep/libhtp.tar.gz
-      - name: Setup cbindgen
-        run: |
-          mkdir -p $HOME/.cargo/bin
-          cp prep/cbindgen $HOME/.cargo/bin
-          chmod 755 $HOME/.cargo/bin/cbindgen
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - run: ./autogen.sh
       - run: CFLAGS="${DEFAULT_CFLAGS}" ./configure --enable-netmap
       - run: make -j2
@@ -1977,43 +1860,10 @@ jobs:
           path: ~/.cargo/registry
           key: cargo-registry
 
+      - uses: actions/checkout@v3.5.3
+
       - name: Install dependencies
-        run: |
-          apt update
-          apt -y install \
-                libpcre2-dev \
-                build-essential \
-                autoconf \
-                automake \
-                cargo \
-                git \
-                jq \
-                libtool \
-                libpcap-dev \
-                libnet1-dev \
-                libyaml-0-2 \
-                libyaml-dev \
-                libcap-ng-dev \
-                libcap-ng0 \
-                libmagic-dev \
-                libnetfilter-queue-dev \
-                libnetfilter-queue1 \
-                libnfnetlink-dev \
-                libnfnetlink0 \
-                libhiredis-dev \
-                libjansson-dev \
-                libevent-dev \
-                libevent-pthreads-2.1-7 \
-                libjansson-dev \
-                libpython2.7 \
-                make \
-                parallel \
-                python3-yaml \
-                rustc \
-                software-properties-common \
-                zlib1g \
-                zlib1g-dev \
-                exuberant-ctags
+        run: ./scripts/install-deps.sh --developer
       - name: Install DPDK dependencies
         run: |
           apt update
@@ -2041,18 +1891,11 @@ jobs:
           ninja -C build install
           ldconfig
           cd $HOME
-      - uses: actions/checkout@v3.5.3
       - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
         with:
           name: prep
           path: prep
       - run: tar xf prep/libhtp.tar.gz
-      - name: Setup cbindgen
-        run: |
-          mkdir -p $HOME/.cargo/bin
-          cp prep/cbindgen $HOME/.cargo/bin
-          chmod 755 $HOME/.cargo/bin/cbindgen
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - run: ./autogen.sh
       - run: CFLAGS="${DEFAULT_CFLAGS}" ./configure --enable-dpdk
       - run: make -j2
