mpm/ac-rs: AC matcher based on aho-corasick crate
Count uniq matches only, like the Hyperscan implementation.
Default to single context, similar to other algos.

Ticket: #3847.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -580,6 +580,7 @@ noinst_HEADERS = \
 	util-misc.h \
 	util-mpm-ac.h \
 	util-mpm-ac-ks.h \
+	util-mpm-ac-rs.h \
 	util-mpm.h \
 	util-mpm-hs.h \
 	util-napatech.h \
@@ -1179,6 +1180,7 @@ libsuricata_c_a_SOURCES = \
 	util-mpm-ac.c \
 	util-mpm-ac-ks.c \
 	util-mpm-ac-ks-small.c \
+	util-mpm-ac-rs.c \
 	util-mpm.c \
 	util-mpm-hs.c \
 	util-napatech.c \
